2001-07-18  Marcus Brinkmann  <marcus@gnu.org>

	* linux-src/net/ipv4/devinit.c (configure_device): Initialize IFA
	correctly.  If we are setting the peer on an IFF_POINTOPOINT link,
	force the netmask to 255.255.255.255.
	By Neal H Walfield <neal@cs.uml.edu>.
	
2001-07-13  Neal H Walfield  <neal@cs.uml.edu>

	* options.c (parse_opt): In the cases where we hold global_lock
	and fail, we must release the lock before calling FAIL.

2001-06-08  Marcus Brinkmann  <marcus@gnu.org>

	* timer-emul.c (add_timer): Don't add jiffies to EXPIRES, it is
	the responsibility of the caller to do this.

2001-02-25  Roland McGrath  <roland@frob.com>

	* Makefile (asm/checksum.h): New target.
	(CPPFLAGS): Don't set _HURD_SYSTYPE.
	* glue-include/asm/checksum.h: File removed.

	* linux-src/include/linux/net.h (struct file): Move forward
	decl outside of `struct socket' type definition, for gcc-2.96 syntax.

2001-01-17  Marcus Brinkmann  <marcus@gnu.org>

	* iioctl-ops.c (siocsifXaddr): Remove incorrect comment
	about isroot.
	(S_iioctl_siocsifflags): Likewise.
	(S_iioctl_siocsifmtu): And one more time.

2001-01-07  Marcus Brinkmann  <marcus@gnu.org>

	* pfinet-ops.c: New file to implement hurd/pfinet.defs.

	* iioctl-ops.c: New file to implement iioctl.defs.
	* linux-src/net/core/dev.c: If _HURD_, don't define netdev_chain as
	static.

	* glue-include/linux/if.h: New file, to avoid conflict between
	<net/if.h> (imported by iioctl.defs) and linux version of it.

	* main.c (pfinet_demuxer): Prototype pfinet_server and
	iioctl_server, use them.

	* pfinet.h: New global variables pfinetctl, pfinet_owner
	and pfinet_group.
	* main.c (main): New variable ST. Request pfinetctl from
	trivfs_startup. Use it to determine the owner and group
	of the underlying node.
	* io-ops.c (S_io_reauthenticate): New index variable j. Set
	newuser->isroot also for owners of the underlying file and
	group owners.
	(S_io_restrict_auth): Likewise.
	* socket-ops.c: Include <sys/stat.h> and <hurd/fshelp.h>.