@@ -1,3 +1,11 @@
+2001-07-25  Mark Kettenis  <kettenis@gnu.org>
+
+	* glue-include/linux/socket.h (SOMAXCONN): Only define if it
+	wasn't already.
+	(msg_control, msg_controllen, struct cmsghdr, cmsg_len, cmsg_type,
+	cmsg_level, CMSG_FIRSTHDR, CMSG_NXTHDR, CMSG_DATA, CMSG_LEN): Only
+	define if CMSG_DATA wasn't already defined.
+
 2001-07-18  Marcus Brinkmann  <marcus@gnu.org>
 
 	* linux-src/net/ipv4/devinit.c (configure_device): Initialize IFA
